# zurl

./: Cargo.toml
migrations/: 20260310123843_create_urls_table.sql
src/: lib.rs  main.rs
src/api/: mod.rs  state.rs  urls.rs
src/configuration/: database.rs  mod.rs  settings.rs
src/domain/: errors.rs  mod.rs  url_validate.rs
src/models/: mod.rs  requests.rs  response.rs
src/repositories/: mod.rs  url_repository.rs
src/services/: mod.rs  url_service.rs
